# -*- coding: utf-8 -*-
[metadata]
name = gpio
version = 1.0.0
author = Garrett Berg, Phil Howard
author_email = phil@pimoroni.com
description = gpio access via the standard linux sysfs interface
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gpio sysfs linux
license = MIT
license_files = LICENSE.txt
project_urls =
	GitHub = https://github.com/vitiral/gpio
classifiers =
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: POSIX
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Topic :: Software Development :: Embedded Systems
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 2.7
packages = gpio
install_requires = 

[flake8]
exclude =
	.tox,
	.eggs,
	.git,
	__pycache__,
	build,
	dist
ignore =
	E501